@@ -76,6 +76,7 @@
 
 <script src="js/topologyactions.js"></script>
 <script src="js/topology.js"></script>
+<script src="js/iperf.js"></script>
 <script src="js/flows.js"></script>
 <script src="js/init.js"></script>
 <script src="js/app.js"></script>
