@@ -1,3 +1,7 @@
+** April 12, 2013 **
+- fixed bug in iperf fetch
+- improved iperf logging
+
 ** April 11, 2013 **
 - Use timestamps for iperf display
 This elimates spurious gaps when server responds slowly. However, gaps still appear if the server drops buffers entirely
